--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Employee Management System</h1>
         <hr>
-             <h2 th:text="${message}">Create Employee</h2>
+             <h2 >Create Employee</h2>
              <hr>
 
     
