--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div class="container">
+     <div class="d-flex justify-content-end">
+  <form th:action="@{/logout}" method="post"> 
+         <input type="submit" value="Sign Out" class='btn btn-success'/> 
+         </form>
+         </div>
         <h1>Employee Management System</h1>
         <hr>
              <h2 >Update Employee</h2>
